--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 .board {
     width: 600px;
     height: 600px;
-    background-color: grey;
+    background-color: lightgrey;
     display: flex;
     flex-direction: column;
 }
@@ -14,6 +14,6 @@
 
 .column {
     flex: 1;
-    background-color: blue;
+    background-color: grey;
     margin: 1px;
 }
